--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; URL=/openbio.eu/docs">
+<meta http-equiv="refresh" content="0; URL=/OpenBio.eu/docs">
